<resources>
    <string name="app_name">TravelMemories</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log Out</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>


    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>


    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="fab_button">Add Button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myname">Laurentiu Mihai Zabava</string>
    <string name="myemail">zbvmihai@gmail.com</string>
    <string name="placename">Place Name</string>
    <string name="memory_name">Memory Title</string>
    <string name="place_location">Place Location</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="travel_type">Travel Type</string>
    <string name="mood_100">Mood: 100</string>
    <string name="_23_05_2023">23/05/2023</string>
    <string name="memory_place">Memory Place</string>
    <string name="weather_10_degrees">Weather: 10 Degrees</string>
    <string name="notes">Notes</string>
    <string name="place">Place: %1$s</string>
    <string name="travel_date">Travel Date: %1$s</string>
    <string name="travel_mood">Travel Mood: %1$s</string>
    <string name="type">Travel Type: %1$s</string>
    <string name="temperature">Temperature: %s°C</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="satellite_mode">Satellite Mode</string>
    <string name="map_view">Map View</string>
    <string name="map_scale">Map Scale</string>
    <string name="language_english">English</string>
    <string name="language_romanian">Romanian</string>
    <string name="theme">Theme</string>
    <string name="contact_us">Contact Us</string>
    <string name="travelmemories_contact_com">TravelMemories@contact.com</string>
    <string name="memory_photo">Memory Photo</string>

    <string-array name="language_options">
        <item>@string/language_english</item>
        <item>@string/language_romanian</item>
    </string-array>

    <string-array name="moods_array">
        <item>Select a travel Type.</item>
        <item>Air</item>
        <item>Train</item>
        <item>Road Trip</item>
        <item>Cruise</item>
        <item>Bicycle</item>
        <item>Walking</item>
    </string-array>
</resources>