<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="?attr/materialCardViewElevatedStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@color/ThirdColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:id="@+id/ivMemoryCard"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            app:srcCompat="@drawable/brasov"
            android:scaleType="centerCrop"
            android:contentDescription="@string/memory_photo"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvMemoryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/MainTxt"
                android:text="@string/memory_name"
                android:textStyle="bold"
                android:textColor="@color/MainColor"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                />
            <TextView
                android:id="@+id/tvMemoryPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/memory_place"
                android:textStyle="bold"
                android:textSize="@dimen/SecondaryTxt"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorPrimary"
                />
            <TextView
                android:id="@+id/tvMemoryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="@dimen/SmallTxt"
                android:text="@string/_23_05_2023"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorPrimary"
                />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>